# sgqlite

./: Cargo.toml  recursive_tree.sql  update.md
src/: ingest.rs  main.rs
src/migrations/: 1.down.sql  1.up.sql
