[package]
name = "sgqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
clap = { version = "4.0.29", features = ["derive"] }
git2 = { version = "0.15.0", features = ["vendored-libgit2"] }
lz4 = "1.24.0"
rusqlite = { version = "0.28.0", features = ["bundled-full"] }
rusqlite_migration = "1.0.1"
